--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 	<link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+	<link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#f55b5b">
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-	<link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
-	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-TileColor" content="#b80000">
 	<meta name="theme-color" content="#ffffff">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
